--- a/force-app/main/default/classes/AssignServiceRequests.cls
+++ b/force-app/main/default/classes/AssignServiceRequests.cls
@@ -14,7 +14,7 @@
 **/
 public without sharing class AssignServiceRequests  implements TriggerAction.BeforeInsert{
     
-        /**
+    /**
 * @author Subba Kalavala
 * @date 2/22/2023
 * @description Before Insert 
@@ -32,7 +32,7 @@ public without sharing class AssignServiceRequests  implements TriggerAction.Bef
     }
     
     
-        /**
+    /**
 *   {Purpose} - Method to assign the service request
 *
 *   CHANGE HISTORY
@@ -43,28 +43,56 @@ public without sharing class AssignServiceRequests  implements TriggerAction.Bef
 **/
     public void assignTheOwnerToQueue(List<Case> newlist) {
         Map<String,Id> queueMap = new Map<String,Id>();
-        for(Group grp : [SELECT Id,Name FROM Group WHERE Type = 'Queue']){
-            queueMap.put(grp.Name,grp.id);
+        Set<String> defalutOwners = new Set<String>();
+        Set<Id> contactIds = new Set<Id>();
+        defalutOwners.add(Label.Default_Grid_Support_Request_Owner);
+        defalutOwners.add(Label.Default_HR_Support_Request_Owner);
+        for (Case cnew : newlist) {
+            contactIds.add(cnew.contactId);
         }
+
+        for(User grp : [SELECT Id,Name,contactId,Email FROM User WHERE Email IN : defalutOwners and contactId != null]){
+            queueMap.put(grp.Email,grp.contactId);
+        }
+        Map<Id, Contact> contactMap = new Map<Id, Contact>();
         
-        for(Case cnew : newlist){
+        for(contact con :[SELECT Id, ReportsToId,Resource_Manager__c,Resource_Manager__r.EMS_TM_User__c,ReportsTo.EMS_TM_User__c 
+                          FROM Contact 
+                          WHERE Id IN :contactIds 
+                          ]){
+            contactMap.put(con.Id,con);
+        }
+       system.debug('==contactMap===='+contactMap);
+        for (Case cnew : newlist) {
+            Id ResourceManager = null;
+             Id ReportingManager = null;
+            if(contactMap.containsKey(cnew.ContactId)){
+               ResourceManager =  contactMap.get(cnew.ContactId).Resource_Manager__c;
+            }
+            if(contactMap.containsKey(cnew.ContactId)){
+               ReportingManager =  contactMap.get(cnew.ContactId).ReportsToId;
+            }
+            
             if(cnew.Type != null){
                 if(cnew.Type == 'Problem' || cnew.Type == 'Others'){
-                    if(queueMap.containsKey('Grid Support')){
-                      cnew.OwnerId =  queueMap.get('Grid Support'); 
+                    if(queueMap.containsKey(Label.Default_Grid_Support_Request_Owner)){
+                        cnew.Case_Assignee__c =  queueMap.get(Label.Default_Grid_Support_Request_Owner); 
                     } 
-                }else if(cnew.Type == 'Change Of Details' || cnew.Type == 'Request for Special Leaves'){
-                    if(queueMap.containsKey('HR Executive Queue')){
-                      cnew.OwnerId =  queueMap.get('HR Executive Queue'); 
+                }else if(cnew.Type == 'Change Of Details'){
+                    if(queueMap.containsKey(Label.Default_HR_Support_Request_Owner)){
+                        cnew.Case_Assignee__c =  queueMap.get(Label.Default_HR_Support_Request_Owner); 
                     } 
-                }else if(cnew.Type == 'Apply Resignation'){
-                    if(queueMap.containsKey('HR Executive Queue')){
-                      cnew.OwnerId =  queueMap.get('HR Executive Queue'); 
+                }else if(cnew.Type == 'Resignation'){
+                    cnew.Case_Assignee__c = ResourceManager != null ? ResourceManager : ReportingManager;
+                }else if(cnew.Type == 'Request for Special Leaves'){
+                    if(ReportingManager != null && (cnew.Request_Sub_Type__c == 'Paternity' || cnew.Request_Sub_Type__c == 'Marriage' || cnew.Request_Sub_Type__c == '	Bereavement Leave' || cnew.Request_Sub_Type__c == 'Comp off')){
+                        cnew.Case_Assignee__c = ReportingManager;
                     }
                 } 
             }
+            system.debug('==cnew==='+cnew);
         }
         
-    }
-
+        
+    } 
 }
