--- a/force-app/main/default/classes/createCompoffThroughTimesheet.cls
+++ b/force-app/main/default/classes/createCompoffThroughTimesheet.cls
@@ -9,11 +9,13 @@ public without sharing class createCompoffThroughTimesheet {
                                      EMS_TM_User__c 
                                      FROM contact 
                                      WHERE EMS_TM_User__c =: userId];
-       List<EMS_LM_Leave_Credit__c> compOffRecord=[Select Id 
+       List<EMS_LM_Leave_Credit__c> compOffRecordData=[Select Id 
                                                     FROM EMS_LM_Leave_Credit__c 
                                                     WHERE EMS_LM_Employee__c =: contactRec.Id 
-                                                    AND CompOff_Week__c =:compOffweek ];
-   If(compOffRecord.isEmpty()){
+                                                    AND CompOff_Week__c =:compOffweek 
+                                                    ];
+        SYstem.debug('compOffRecordData'+compOffRecordData);
+   If(compOffRecordData.isEmpty()){
   try{
         EMS_LM_Leave_Credit__c comoffRecord = new EMS_LM_Leave_Credit__c();
         comoffRecord.EMS_LM_Select_Leave_Type__c ='Compensatory Off';
@@ -31,8 +33,11 @@ public without sharing class createCompoffThroughTimesheet {
 
   }
    }else{
-       String errorOccuredWith ='You have already Compoff Record in This Week';
-     throw new AuraHandledException(errorOccuredWith);
+                  compOffRecordData[0].EMS_LM_Leaves_Credited__c = compoffhours/8;
+                  Update compOffRecordData[0];
+       return compOffRecordData[0];
+       /*String errorOccuredWith ='You have already Compoff Record in This Week';
+     throw new AuraHandledException(errorOccuredWith);*/
 
    } 
 
