--- a/force-app/main/default/classes/resourceTileController.cls
+++ b/force-app/main/default/classes/resourceTileController.cls
@@ -85,6 +85,121 @@ public without sharing class resourceTileController {
         return dwrap; 
      }
     
+    @AuraEnabled(cacheable=true)
+    public static List<fileWrapper> getRelatedFilesByRecordId() {
+        Map<Id,fileWrapper> fileWrapMap = new Map<Id,fileWrapper>();
+        User urec = [SELECT Id,Contact.AccountId FROM User WHERE Id=:Userinfo.getUserId()];
+        String accountId = urec.Contact.AccountId != null ? urec.Contact.AccountId : null;
+        // Get record file IDs        
+        List<ContentDocumentLink> files = [SELECT ContentDocumentId FROM ContentDocumentLink WHERE LinkedEntityId = '00152000010lJfYAAU'];
+        List<ID> fileIDs = new List<ID>();
+        for (ContentDocumentLink docLink : files) {
+            fileIDs.add(docLink.ContentDocumentId);
+        }
+
+        
+        List<ContentVersion> docs = [SELECT ContentDocumentId, FileExtension, Title 
+            FROM ContentVersion WHERE ContentDocumentId IN: fileIDs ];
+       
+        for (ContentVersion docLink : docs) {
+           fileWrapper fw = new fileWrapper();
+           fw.fileName = docLink.Title;
+           fw.fileExtension = docLink.FileExtension + accountId;
+           fw.fileId = docLink.ContentDocumentId;
+           fileWrapMap.put(docLink.ContentDocumentId,fw);
+        }
+        
+        for(ContentDistribution cdoc : [Select Id,ContentDocumentId,ContentDownloadUrl,DistributionPublicUrl from ContentDistribution where ContentDocumentId IN:fileWrapMap.keySet()]){
+            if(fileWrapMap.containsKey(cdoc.ContentDocumentId)){
+                fileWrapMap.get(cdoc.ContentDocumentId).filePublicURL = cdoc.DistributionPublicUrl;
+            }
+        }
+
+        return fileWrapMap.values();
+    }
+    
+    
+    @AuraEnabled(cacheable=true)
+    public static datawrapper getUserHiearchyInfo(Id userId) {
+        
+           
+        User urecord = [SELECT FullPhotoUrl,Id,Name,Employee_Id__c,Contact.EMS_RM_Employee_Id__c,ContactId,contact.ReportsToId,
+                        Contact.ReportsTo.Name,Contact.Resource_Role__r.Name FROM User WHERE Id = :Userinfo.getUserId() and ContactId != null];
+       
+        Contact conRec = [SELECT Id,Work_Location__c,Work_Location__r.Country__c,ReportsTo.Resource_Role__r.Name,
+                          ReportsTo.EMS_RM_Employee_Id__c,ReportsTo.EMS_TM_User__c,
+                          ReportsTo.EMS_TM_User__r.FullPhotoUrl,ReportsTo.Name,ReportsToId FROM Contact WHERE Id=:urecord.contactId];
+        List<Contact> mydirectReports = new List<Contact>();
+        Set<Id> myrepotiescontids = new Set<Id>();
+         Set<Id> mereportsTo = new Set<Id>();
+        for(Resource_Resource_Relationship__c rrr : [SELECT Id,Resource__c,Resource_Reports_To__c FROM Resource_Resource_Relationship__c WHERE ( Resource_Reports_To__c=:urecord.contactId OR Resource__c=:urecord.contactId)]){
+            if(rrr.Resource__c == urecord.contactId){
+                myrepotiescontids.add(rrr.Resource__c); 
+            }
+             if(rrr.Resource_Reports_To__c == urecord.contactId){
+                mereportsTo.add(rrr.Resource__c); 
+            }
+            
+        }
+        List<datawrapper> dwrapList = new List<datawrapper>();
+        List<datawrapper> directReportsList = new List<datawrapper>();
+        List<datawrapper> meReportsToList = new List<datawrapper>();
+         datawrapper dwrap = new datawrapper();
+        dwrap.resourceName = urecord.Name;
+        dwrap.resourcePhotoURL = urecord.FullPhotoUrl;
+        dwrap.resourceCpId = urecord.Contact.EMS_RM_Employee_Id__c;
+        dwrap.resourceRole = urecord.Contact.Resource_Role__r.Name;
+        dwrap.resourceReportTo = urecord.Contact.ReportsTo.Name;
+        dwrap.resourceUserId = urecord.Id;
+        dwrap.resourceContactId = urecord.ContactId;
+       
+        
+        for(Contact myreporties : [SELECT Id,Name,EMS_TM_User__r.FullPhotoUrl,EMS_RM_Employee_Id__c,Resource_Role__r.Name,ReportsTo.Name
+                                  ,EMS_TM_User__c FROM Contact WHERE Id IN: mereportsTo]){
+        datawrapper dwrap2 = new datawrapper();
+        dwrap2.resourceName = myreporties.Name;
+        dwrap2.resourcePhotoURL = myreporties.EMS_TM_User__r.FullPhotoUrl;
+        dwrap2.resourceCpId = myreporties.EMS_RM_Employee_Id__c;
+        dwrap2.resourceRole = myreporties.Resource_Role__r.Name;
+        dwrap2.resourceReportTo = myreporties.ReportsTo.Name;
+        dwrap2.resourceUserId = myreporties.EMS_TM_User__c;
+        dwrap2.resourceContactId = myreporties.id;
+        directReportsList.add(dwrap2);
+        }
+        
+        for(Contact myreporties : [SELECT Id,Name,EMS_TM_User__r.FullPhotoUrl,EMS_RM_Employee_Id__c,Resource_Role__r.Name,ReportsTo.Name
+                                  ,EMS_TM_User__c FROM Contact WHERE Id=:urecord.contact.ReportsToId]){
+        datawrapper dwrap2 = new datawrapper();
+        dwrap2.resourceName = myreporties.Name;
+        dwrap2.resourcePhotoURL = myreporties.EMS_TM_User__r.FullPhotoUrl;
+        dwrap2.resourceCpId = myreporties.EMS_RM_Employee_Id__c;
+        dwrap2.resourceRole = myreporties.Resource_Role__r.Name;
+        dwrap2.resourceReportTo = myreporties.ReportsTo.Name;
+        dwrap2.resourceUserId = myreporties.EMS_TM_User__c;
+        dwrap2.resourceContactId = myreporties.id;
+        meReportsToList.add(dwrap2);
+        }
+        
+        
+        
+        
+        dwrap.directReportesUnderme = directReportsList;
+        dwrap.meReportsToList = meReportsToList;
+      
+        return dwrap;  
+    }
+    
+    public class fileWrapper{
+        @AuraEnabled
+        public string fileName;
+         @AuraEnabled
+        public string fileExtension;
+         @AuraEnabled
+        public string filePublicURL;
+         @AuraEnabled
+        public string fileId;
+    }
+    
     
     public class datawrapper{
         @AuraEnabled
@@ -112,8 +227,10 @@ public without sharing class resourceTileController {
          @AuraEnabled
         public string alertTitle;
          @AuraEnabled
-        public string alertDesc;
-        
-        
+        public string alertDesc; 
+        @AuraEnabled
+        public List<datawrapper> directReportesUnderme;
+        @AuraEnabled
+        public List<datawrapper> meReportsToList;
     }   
 }
